2001-12-10  Israel Escalante <israel@ximian.com>

	* Makefile.am (sound_properties_control_LDADD): Change top_srcdir to
	top_builddir.

2001-11-29  Hans Petter Jansson  <hpj@ximian.com>

	* sound-properties-capplet.c (apply_settings): Added lame hack to
	restore mixer settings here.
	
2001-11-18  Richard Hestilow  <hestilow@ximian.com>

	* Makefile.am (sound_properties_control_LDADD): Add libsounds.a.

	* prefs-widget.c (apply_settings): Export our settings to
	gnome-config (needed by gnome-libs). Also save and reload event
	sounds.
	(create_dialog): Add a SoundView on the sound events.

	* sound-properties.glade: Add a tab for the sound events.

2001-11-16  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am (EXTRA_DIST): Remove $(oaf_DATA).in

2001-10-12  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am: Make OAF file creation generic

2001-09-28  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am: Remove support for disabling bonobo-conf build

	* Makefile.am: Change the binary name to
	mouse-properties-control and create a wrapper script from
	../common/wrapper-script.in to be named mouse-properties-capplet

2001-07-31  Chema Celorio  <chema@celorio.com>

	* Makefile.am (cappletname): add DISTDIR to install-data-local

2001-07-27  Bradford Hovinen  <hovinen@ximian.com>

	* RELEASE : 1.5.2

2001-07-25  Chema Celorio  <chema@celorio.com>

	* Makefile.am: remove the OAF_FILE_IN_RULE and copy it here
	* Makefile.am: remove the DESKTOP_IN_RULE and copy the sed here

2001-07-25  Bradford Hovinen  <hovinen@ximian.com>

	* prefs-widget.c (prefs_widget_init): Fix macro name

	* main.c (main): Fix macro name

2001-07-24  Richard Hestilow  <hestilow@ximian.com>
	
	* sound-properties-capplet.c (main): Pass in legacy files to
	capplet_init.
	(get_legacy_settings): Use the "Main" config prefix.

2001-07-23  Bradford Hovinen  <hovinen@ximian.com>

	* sound-properties-capplet.c (apply_settings): Make sure ESD gets
	killed if it's supposed to
