@@ -1,3 +1,8 @@
+2002-02-14  Richard Hestilow  <hestilow@ximian.com>
+
+	* sound-properties-capplet.c: Change configuration
+	key prefix to CAPPLET_CONFIG_PREFIX/sound-properties.
+	
 2001-12-10  Israel Escalante <israel@ximian.com>
 
 	* Makefile.am (sound_properties_control_LDADD): Change top_srcdir to
